fixed spacing to the HTML page

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ img {
   height: 400px;
   width: 500px;
   display: block;
+  float: lefts;
 }
 p {
   font-family: sans-serif;
